@@ -1,0 +1,7 @@
+; $Id$
+name = Administration menu Toolbar style
+description = A better Toolbar.
+package = Administration
+core = 7.x
+dependencies[] = admin_menu
+files[] = admin_menu_toolbar.module
